fix reposivness bugs on mobile

--- a/src/scss/_diaryTable.scss
+++ b/src/scss/_diaryTable.scss
@@ -17,7 +17,7 @@
 
             tr {
                 td:first-child {
-                    width: 15rem
+                    min-width: 12rem;
                 }
             }
             
