--- a/src/scss/base.css
+++ b/src/scss/base.css
@@ -406,10 +406,13 @@ select {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 1rem;
 }
-#main-food #diary-table {
-  overflow-x: scroll;
+@media (max-width: 40rem) {
+  #main-food #diary-table {
+    width: 95%;
+    overflow-x: scroll;
+    padding-bottom: 1rem;
+  }
 }
 
 #main-motivation {
@@ -521,7 +524,7 @@ select {
   font-weight: 900;
 }
 #diary-table table thead tr td:first-child {
-  width: 15rem;
+  min-width: 12rem;
 }
 #diary-table table tbody tr td {
   border-bottom: 1px solid #c8c8c8;
